Added hardware edit to proxmox-manage
