# src/lib/api/index.ts
@@ -76,12 +76,16 @@ export type { ProxmoxAuthOptions } from './models/ProxmoxAuthOptions';
 export type { ProxmoxContainer } from './models/ProxmoxContainer';
 export type { ProxmoxContainerListResult } from './models/ProxmoxContainerListResult';
 export type { ProxmoxLXCRequest } from './models/ProxmoxLXCRequest';
+export type { ProxmoxLXCResourcesResult } from './models/ProxmoxLXCResourcesResult';
+export type { ProxmoxLXCResourcesUpdateRequest } from './models/ProxmoxLXCResourcesUpdateRequest';
 export type { ProxmoxLXCResult } from './models/ProxmoxLXCResult';
 export type { ProxmoxPVEUserCreateRequest } from './models/ProxmoxPVEUserCreateRequest';
 export type { ProxmoxPVEUserCreateResult } from './models/ProxmoxPVEUserCreateResult';
 export type { ProxmoxVM } from './models/ProxmoxVM';
 export type { ProxmoxVMCreateRequest } from './models/ProxmoxVMCreateRequest';
 export type { ProxmoxVMCreateResult } from './models/ProxmoxVMCreateResult';
+export type { ProxmoxVMHardwareResult } from './models/ProxmoxVMHardwareResult';
+export type { ProxmoxVMHardwareUpdateRequest } from './models/ProxmoxVMHardwareUpdateRequest';
 export type { ProxmoxVMListResult } from './models/ProxmoxVMListResult';
 export type { ProxmoxVMStartRequest } from './models/ProxmoxVMStartRequest';
 export type { ProxmoxVMStartResult } from './models/ProxmoxVMStartResult';
